--- a/Source/LeanBattleship.Web/index.html
+++ b/Source/LeanBattleship.Web/index.html
@@ -20,7 +20,7 @@
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="#/home"><i class="fa fa-home"></i> Home</a></li>
                     <li><a href="#/tournaments"><i class="fa fa-gamepad"></i> Tournaments</a></li>
-                    <li><a href="api/version" target="_new"><i class="fa fa-question-circle"></i> Api Version</a></li>
+                    <li><a href="api/version" target="_new"><i class="fa fa-question-circle"></i> Api&nbsp;Version</a></li>
                     <!--<li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
                             <ul class="dropdown-menu">
